# dojo

./: .gitignore  README.md
.github/workflows/: testing.yml
Java-related/Java/: Strings & Chars.md
bash/: README.md  testing.sh
crystal/: README.md  crystal.cr
csharp/: CSharp.sln  README.md
csharp/CSharp/: CSharp.csproj  ExtensionMethods.cs  Program.cs  QuickTesting.cs  Usings.cs  Utilities.cs
elixir/: first.exs
fsharp/: .gitignore  FSharp.sln  README.md
fsharp/functional/: ReaderMonad.fsx  ReaderMonad1b.fsx  StateMonad.fsx  StateMonad2.fsx  StateMonad3.fsx
fsharp/scripts/: FynnInterviewQuestions.fsx
go/: README.md  channels.go  go.mod  hello.go  interfaces.go  main.go  server.go  testing.go
graphql/: package-lock.json
graphql-dojo/: README.md
haskell/: README.md  first.hs  haskell.cabal
haskell/app/: Main  Main.hs
haskell/concepts/: functors.hs
haskell/scripts/: DaysSince.hs  First.hs  FynnInterviewQuestions.Easy.hs  (+3 more)
kotlin/: main.kt
nim/: README.md  main  main.nim
ocaml/: hello.ml  slackLetters.ml  sum.ml
ocaml/sandbox2/sandbox2/: dune-project  sandbox2.opam
ocaml/sandbox2/sandbox2/lib/: dune
ocaml/sandbox2/sandbox2/test/: dune
python/: basic.py
rest/: api.rest  main.rest  versioning.rest
ruby/: README.md  blocks.rb  command_expansion.rb  exceptions.rb  files.rb  fynn_interview_questions.rb  main.rb  person.rb  regex.rb  rot.rb  threading.rb
ruby-dojo/: ranges.rb  threading.rb
rust/: Cargo.toml
typescript/: .gitignore  README.md  helloworld.js  helloworld.ts  splatoonPlayer.js  splatoonPlayer.ts  tsconfig.json
(+110 files in other folders)
